--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Nuget ignores
+**/packages/*
+!**/packages/repositories.config
